--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,19 +1,23 @@
-# Node modules
-node_modules/
-package-lock.json
-yarn.lock
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Build output and cache
-build/
-dist/
-.cache/
-.tmp/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Coverage reports (if testing)
-coverage/
+# testing
+/coverage
 
-# Static assets generated during build
-public/static/
+# production
+/build
 
-# Logs
-*.log
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
