--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,5 +46,13 @@
   "resolutions": {
     "nth-check": "^2.0.1",
     "postcss": "^8.4.31"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-syntax-flow": "^7.26.0",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@svgr/core": "^8.1.0",
+    "@testing-library/dom": "^10.4.0",
+    "typescript": "^5.6.3"
   }
 }
