--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -8,16 +6,31 @@
 # testing
 /coverage
 
-# production
+# production builds
 /build
+/frontend/build
+/backend/build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+
+# OS-specific files
+Thumbs.db
+.idea/
+.vscode/
+
+# Ignore any generated files
+dist/
+.cache/
+.temp/
